# pancad

./: .gitignore  .pylintrc  .readthedocs.yaml  FreeCAD_Test_Model.20241110-175357.FCBak  FreeCAD_Test_Model.20241115-150544.FCBak  FreeCAD_Test_Model.FCStd  Makefile  README.md  pyproject.toml  requirements.txt  temp.py
docs/: Makefile  requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
docs/source/filetypes/: filetypes.rst
docs/source/geometry/: constraints.rst  features.rst  geometry.rst
docs/source/tutorials/: how_do_i_make_a_freecad_file.py  how_to_read_from_a_freecad_file.py
docs/source/utilities/: utilities.rst
src/: config.py  defaults.ini  enum_svg_color_keywords.py  file_handlers.py  free_cad_object_wrappers.py  freecad_sketch_readers.py  freecad_sketcher_to_svg_translators.py  freecad_svg_file.py  inkscape_interface.py  svg_element_utils.py  svg_elements.py  svg_file.py  svg_generators.py  svg_interface.py  svg_parsers.py  svg_readers.py  svg_to_freecad_sketcher_translators.py  svg_validators.py  svg_writers.py  trigonometry.py
src/PanCAD/: __init__.py  config.py  file_handlers.py  settings.ini
src/PanCAD/config/: config.toml
src/PanCAD/constants/: __init__.py  _config_cache_category.py  _software_name.py  angle_convention.py
src/PanCAD/data/: freecad.toml
src/freecad/: free_cad_object_wrappers.py  object_wrappers.py  sketch_readers.py
src/pancad/: __about__.py  __init__.py  abstract.py  api.py  exceptions.py
src/svg/: element_utils.py  elements.py  enum_color_keywords.py  file.py  generators.py  parsers.py  readers.py  svg_element_utils.py  svg_elements.py  svg_file.py  svg_generators.py  svg_parsers.py  svg_readers.py  svg_validators.py  svg_writers.py  validators.py  writers.py
src/text2freecad/: free_cad_object_wrappers.py  inkscape_interface.py  text_to_sketcher.py
src/translators/: freecad_sketcher_to_svg.py  freecad_sketcher_to_svg_translators.py  freecad_svg_file.py  svg_to_freecad_sketcher.py  svg_to_freecad_sketcher_translators.py
tests/: __init__.py  conftest.py  inkscape_interface_testing.py  input_sketch_test.dxf  svg_d_attribute_parsing_test.py  svg_troubleshooting.py  test_config.py  test_file_handlers.py  test_freecad_object_wrappers.py  test_freecad_sketch_readers.py  test_freecad_sketcher_to_svg_translators.py  test_freecad_svg_file.py  test_geometry_coordinate_system.py  test_geometry_line.py  test_geometry_line_segment.py  test_geometry_plane.py  test_geometry_point.py  test_geometry_spatial_relations.py  test_pancad_init.py  test_public_interface.py  test_svg_element_utils.py  test_svg_elements.py  test_svg_file.py  test_svg_generators.py  test_svg_parsers.py  test_svg_readers.py  test_svg_to_freecad_sketcher_translators.py  test_svg_validators.py  test_svg_writers.py  test_trigonometry.py  text_to_sketcher.py
tests/sample_config/: freecad_1_windows_bin.toml  freecad_bin_user_config_fake.toml  test_invalid_options_0.ini  test_nominal_settings_0.ini
tests/sample_freecad/: arc_conversion_checking_calculations.FCStd  constraint_mapping_special_cases.FCStd  cube_1x1x1.FCStd  cube_1x1x1_PointOnObject.FCStd  cube_1x1x1_colored.FCStd  ellipse_fit_box_calculations.FCStd  elliptical_arc_checking_calculations.FCStd  empty.FCStd  horizontal_line.FCStd  invalid_pads.FCStd  invalid_sketches.FCStd  one_of_each_feature.FCStd  one_of_each_sketch_geometry.FCStd  only_one_sketch.FCStd  rounded_rect_with_center_circle.FCStd  sketch_empty.FCStd  sketch_with_external_geometry.FCStd  test_multi_fit_box_checking.FCStd  test_sketch_readers.20241224-103552.FCBak  test_sketch_readers.FCStd  unconstrained_line.FCStd
tests/sample_pancad_objects/: sample_part_files.py  sample_sketches.py
tests/test_filetypes/: test_part_file.py  test_sketcher_angle_constraints.py
tests/test_freecad/: test_file.py  test_filetypes.py  test_map.py  test_read_freecad.py
tests/test_geometry/: test_body.py  test_circle.py  test_circular_arc.py  test_coincident.py  test_constraint_utils.py  test_coordinate_system.py  test_distance.py  test_ellipse.py  test_extrude.py  test_feature_container.py  test_feature_system.py  test_horizontal.py  test_line.py  test_line_segment.py  test_plane.py  test_point.py  test_shared_geometry.py  test_sketch.py  test_sketch_geometry_system.py  test_spatial_relations.py  test_storage.py  test_vertical.py
tests/test_svg/: test_grammar_regex.py  test_path.py
tests/test_utils/: test_constraint_utils.py  test_geometry_utils.py  test_relations.py  test_system_solver.py
tests/utils/: __init__.py  _file_cleanup.py  plotting.py  viewer.ipynb
(+235 files in other folders)
