[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pancad"
description = "A CAD (Computer-Aided Design) file translator"
require-python = "3.11"
authors = [
    {name = "spky"},
]
maintainers = [
    {name = "spky"},
]
dynamic = ["version"]
license = "CC0-1.0"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = [
    "alabaster==1.0.0",
    "babel==2.16.0",
    "build==1.2.2.post1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "docutils==0.21.2",
    "idna==3.10",
    "imagesize==1.4.1",
    "Jinja2==3.1.4",
    "MarkupSafe==3.0.2",
    "numpy==2.2.1",
    "numpy-quaternion==2024.0.10",
    "packaging==24.2",
    "Pygments==2.18.0",
    "pyproject_hooks==1.2.0",
    "requests==2.32.3",
    "scipy==1.16.1",
    "snowballstemmer==2.2.0",
    "Sphinx==8.1.3",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-programoutput==0.18",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "urllib3==2.2.3",
]
[project.urls]
Homepage = "https://github.com/spky/pancad"
Issues = "https://github.com/spky/pancad/issues"

[tool.hatch.version]
path = "src/pancad/__about__.py"