[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pancad"
description = "A CAD (Computer-Aided Design) file translator"
require-python = "3.11"
authors = [
    {name = "spky"},
]
maintainers = [
    {name = "spky"},
]
dynamic = ["version"]
license = "CC0-1.0"
license-files = ["LICENSE"]
readme = "README.md"
dependencies = [
    "numpy>=2.4",
    "numpy-quaternion",
    "scipy",
]
[project.urls]
Homepage = "https://github.com/spky/pancad"
Issues = "https://github.com/spky/pancad/issues"

[tool.hatch.version]
path = "src/pancad/__about__.py"

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.lint]
extra-dependencies = [
    "pylint",
    "pytest",
]

[tool.hatch.envs.dev]
extra-dependencies = [
  "matplotlib",
  "jupyterlab",
  "ipywidgets",
  "pytest",
  "plotly",
  "pandas",
]

[tool.hatch.envs.lint.scripts]
check = [
    "pylint {args:.}",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest",
]
[tool.hatch.envs.types.scripts]
# Script to type check a given file
check = "mypy --install-types --non-interactive {args:.}"
# Script to strictly type check a given file
strict = "mypy --install-types --non-interactive --strict {args:.}"
# Script to strictly type check all the files in the tool.mypy section
strictdefault = "mypy --install-types --non-interactive --strict"
strictdefaultnoany = "mypy --install-types --non-interactive --strict --disallow-any-expr"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11"]

[tool.hatch.envs.docs]
python = "3.11"
dependencies = [
    "alabaster==1.0.0",
    "babel==2.16.0",
    "build==1.2.2.post1",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "colorama==0.4.6",
    "docutils==0.21.2",
    "idna==3.10",
    "imagesize==1.4.1",
    "Jinja2==3.1.4",
    "MarkupSafe==3.0.2",
    "packaging==24.2",
    "Pygments==2.18.0",
    "pyproject_hooks==1.2.0",
    "requests==2.32.3",
    "snowballstemmer==2.2.0",
    "Sphinx==8.1.3",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-programoutput==0.18",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "urllib3==2.2.3",
]

[tool.hatch.envs.docs.scripts]
build = [
    "make docs",
]
force-build = [
    "make -B docs",
]

[tool.mypy]
files = [
    "src/pancad/abstract.py",
    "src/pancad/geometry/point.py",
    "src/pancad/geometry/unique_lists.py",
    "src/pancad/utils/trigonometry.py",
    "src/pancad/utils/pancad_types.py",
    "tests/test_trigonometry.py",
    "tests/test_geometry/test_point.py",
]